callme-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: callme-service-destination
spec:
  host: callme-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  # trafficPolicy: # --- enable for adding circuit breaker into DestinationRule
  #   connectionPool:
  #     http:
  #       http1MaxPendingRequests: 1
  #       maxRequestsPerConnection: 1
  #       maxRetries: 0
  #   outlierDetection:
  #     consecutive5xxErrors: 2
  #     interval: 30s
  #     baseEjectionTime: 1m
  #     maxEjectionPercent: 100
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: callme-service-route
spec:
  hosts:
    - callme-service
  http:

    - route:
      - destination:
          host: callme-service
          subset: v2
        weight: 80
      - destination:
          host: callme-service
          subset: v1
        weight: 20
      # retries:
      #   attempts: 3
      #   retryOn: gateway-error,connect-failure,refused-stream
      # timeout: 0.5s
      # fault: # --- enable for inject fault into the route
      #   delay:
      #     percentage:
      #       value: 33
      #     fixedDelay: 3s
